# industrial_core

industrial_msgs/: CMakeLists.txt  package.xml
industrial_robot_client/: CMakeLists.txt  package.xml
industrial_robot_client/include/industrial_robot_client/: joint_relay_handler.h  robot_status_relay_handler.h  visibility_control.h
industrial_robot_client/src/: robot_status_relay_handler.cpp
simple_message/: CMakeLists.txt  package.xml
simple_message/include/simple_message/: log_wrapper.h  visibility_control.h
simple_message/src/: message_manager.cpp  robot_status.cpp
