<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>industrial_msgs</name>
  <version>2.0.0</version>
  <description>
	The industrial message package containes industrial specific messages 
	definitions. This package is part of the ROS-Industrial program.
  </description>
  <author>Shaun Edwards</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad (NTNU)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_msg</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>