<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_message</name>
  <version>2.0.0</version>
  <description>
	simple_message defines a simple messaging connection and protocol for communicating 
	with an industrial robot controller.  Additional handler and manager classes are 
	included for handling connection limited systems.  This package is part of the ROS-Industrial 
	program.
  </description>
  <author>Shaun Edwards</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad (NTNU)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/simple_message</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>industrial_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
